# saarthal-delay

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: AnalogDelay.cpp  AnalogDelay.h  DelayLine.cpp  DelayLine.h  DigitalDelay.cpp  DigitalDelay.h  TapeDelay.cpp  TapeDelay.h
src/ui/: KnobLookAndFeel.h
